# microorganism-classifier

./: .gitignore  README.md  alembic.ini  index.html  justfile  package.json  pyproject.toml  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
.tsbuild/: tsconfig.node.tsbuildinfo  vite.config.js
papers/: IMAGE_PROCESSING_NOTES.md
sidecar/: api.py  camera.py  check_camera.py  clip_writer.py  db.py  db_migrate.py  detect.py  frame_buffer.py  frame_source.py  image_processing.py  main.py  models.py  morphometry.py  paths.py  process_lifetime.py  recorder.py  settings_service.py  track.py  tracklet_writer.py
sidecar/fixtures/: README.md
sidecar/migrations/: env.py  script.py.mako
sidecar/migrations/versions/: 0eaa9e275559_add_device_index_to_settings.py  18755637d96f_initial_schema.py  6e32d60ae61c_add_enhancement_settings.py  7922d8417fc3_add_clip_table.py  a2afa7f90d91_add_snapshot_table.py  e8a8bc69371a_add_settings_table.py
src/: App.tsx  index.css  main.tsx  state.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BottomBar.tsx  CameraSelect.tsx  CameraView.tsx  Library.tsx  ProcessingPane.tsx  Select.tsx  SessionMenu.tsx  SettingsSheet.tsx  SetupSheet.tsx  TitleBar.tsx  TrackSidebar.tsx
src/lib/: api.ts  ws.ts
