[project]
name = "microorganism-classifier-sidecar"
version = "0.1.0"
description = "Python sidecar for camera capture, tracking, and recording"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "av>=13.0",
    "numpy>=2.0",
    "pydantic>=2.9",
    "sqlite-utils>=3.37",
    "scipy>=1.14",
    "filterpy>=1.4.5",
    "sqlmodel>=0.0.39",
    "alembic>=1.18.5",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["sidecar/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
