[package]
name = "microorganism-classifier"
version = "0.1.0"
description = "Microscope capture, tracking, and labelling"
edition = "2021"
rust-version = "1.77"

[lib]
name = "microorganism_classifier_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
